Index menú de almohadas

--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
             <li class="nav-item" role="presentation">
               <a class="nav-link" id="pet-tab" data-toggle="pill" href="#pet" role="tab" aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-paw icon" style="line-height: unset;"></i></a>
             </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="pillow-tab" data-toggle="pill" href="#pillow" role="tab" aria-controls="pills-contact" aria-selected="false"><i class="fa-solid fa-bed icon" style="line-height: unset;"></i></a>
+            </li>
           </ul>
           <!----Contenido---->
           <div class="tab-content text-justify" id="pills-tabContent">
@@ -539,7 +542,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/webp/AMENIDADES_2.jpeg" class="img-responsive" alt="Image">
+                    <img src="assets/webp/CAFE_Y_RED_VELVET.jpeg" class="img-responsive" alt="Image">
                   </div>
                   <div class="col-md-6" style="height: auto;">
                     <span class="super-heading-sm fontHover">Conoce nuestro</span>
@@ -597,6 +600,27 @@
                     </ul>
                     <p class="text-center cursiveFont fontHover">Costo por perrito: $300MXN por noche.<br>En habitaciones designadas.</p>
                     <a href="./files/Reglamento_petFriendly_HPMx.pdf" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Reglamento</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="pillow" role="tabpanel" aria-labelledby="pillow-tab">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-6">
+                    <img src="./assets/webp/MENU_DE_ALMOHADAS.jpeg" class="img-responsive" alt="Image">
+                  </div>
+                  <div class="col-md-6">
+                    <span class="super-heading-sm fontHover">Conoce nuestro</span>
+                    <h3 class="heading cursiveFont">Menú de Almohadas</h3>
+                    <h4 class="cursiveFont">Lorem ipsum dolor sit amet.</h4>
+                    <!--<ul class="list-unstyled">
+                      <li><i class="fa-solid fa-list-check fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i> No olvides descargar el reglamento para la entrada de tu perrito a Hotel Punto MX.</li>
+                      <li><i class="fa-solid fa-dog fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i>Peso limite permitido hasta 15 kg en talla chica.</li>
+                      <li><i class="fa-solid fa-shield-dog fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i>Lleva documentación de tu mascota.</li>
+                    </ul>-->
+                    <p class="text-center cursiveFont fontHover">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                    <a href="#" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Menú</a>
                   </div>
                 </div>
               </div>
@@ -666,7 +690,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.jpeg); background-size: contain;">
+            <div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE_2.jpeg); background-size: contain;">
               <div class="date text-center" style="font-size: 1.1rem;">
                 <span>Room</span>
                 <span>Service</span>
