Footer on roomservice.html

--- a/roomservice.html
+++ b/roomservice.html
@@ -301,11 +301,11 @@
                     <div class="col-md-3">
                         <ul class="social-icons">
                             <li>
-                                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
-                                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
-                                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
-                                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
-                                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
+                                <a class="circle_element" href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="fa-brands fa-twitter" style="color: #000;"></i></a>
+                                <a class="circle_element" href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="fa-brands fa-facebook" style="color: #000;"></i></a>
+                                <a class="circle_element" href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000;"></i></a>
+                                <!--<a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><span class="footer_esp_ta">--</span></a>-->
+                                <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><img src="./assets/logos/tripadvisor_l.png"></a>
                             </li>
                         </ul>
                     </div>
