Widget footer center

--- a/restaurant.html
+++ b/restaurant.html
@@ -385,7 +385,16 @@
                 <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><img src="./assets/logos/tripadvisor_l.png"></a>
               </li>
             </ul>
-            <div id="TA_cdswritereviewlg536" class="TA_cdswritereviewlg"><ul id="Ea8wnx2" class="TA_links JZShfshezv"><li id="XE5FiGTI" class="ozAAbpJR"><a target="_blank" href="https://www.tripadvisor.es/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_horizontal_secondary_registered.svg" alt="TripAdvisor"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=536&amp;locationId=12696075&amp;lang=es&amp;lang=es&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
+            <div id="TA_cdswritereviewlg536" class="TA_cdswritereviewlg" style="display: flex; justify-content: center;">
+              <ul id="Ea8wnx2" class="TA_links JZShfshezv">
+                <li id="XE5FiGTI" class="ozAAbpJR">
+                  <a target="_blank" href="https://www.tripadvisor.es/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html">
+                    <img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_horizontal_secondary_registered.svg" alt="TripAdvisor"/>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <script async src="https://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=536&amp;locationId=12696075&amp;lang=es&amp;lang=es&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
           </div>
         </div>
       </div>
