--- a/index.html
+++ b/index.html
@@ -358,22 +358,20 @@
     <div id="fh5co-counter-section" class="fh5co-counters">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center myc">
+          <div class="col-md-3 text-center">
+            <div id="TA_certificateOfExcellence321" class="TA_certificateOfExcellence" style="display: flex!important; justify-content: center!important;"><ul id="Hyeg0E7bq" class="TA_links CFs3dF7G0xKM"><li id="0CE8Xgw7lt" class="YBsrKIUq"><a target="_blank" href="https://www.tripadvisor.es/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html"><img src="https://static.tacdn.com/img2/travelers_choice/widgets/tchotel_2022_LL.png" alt="TripAdvisor" class="widCOEImg" id="CDSWIDCOELOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=certificateOfExcellence&amp;uniq=321&amp;locationId=12696075&amp;lang=es&amp;year=2022&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
+          </div>
+          <div class="col-md-3 text-center">
             <span class="fh5co-counter js-counter" data-from="0" data-to="485" data-speed="5000" data-refresh-interval="50"></span>
             <span class="fh5co-counter-label">Viajeros puntuaron como "Excelente" en Tripadvisor</span>
           </div>
-          <div class="col-md-6 text-center myc">
+          <div class="col-md-3 text-center">
             <span class="fh5co-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
             <span class="fh5co-counter-label">Atracciones en un radio de 0.5km</span>
           </div>
-          <!--<div class="col-md-3 text-center">
-              <span class="fh5co-counter js-counter" data-from="0" data-to="8200" data-speed="5000" data-refresh-interval="50"></span>
-              <span class="fh5co-counter-label">Transactions</span>
+          <div class="col-md-3 text-center" style="justify-content: center;">
+            <div id="TA_excellent4" class="TA_excellent" style="display: flex!important; justify-content: center!important;"><ul id="nt6pqgw" class="TA_links z9hcbFqDLvVC"><li id="A4mV1R4" class="8dBSaxLV8d"><a target="_blank" href="https://www.tripadvisor.es/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_horizontal_secondary_registered.svg" alt="TripAdvisor" class="widEXCIMG" id="CDSWIDEXCLOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=excellent&amp;uniq=4&amp;locationId=12696075&amp;lang=es&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
           </div>
-          <div class="col-md-3 text-center">
-              <span class="fh5co-counter js-counter" data-from="0" data-to="8763" data-speed="5000" data-refresh-interval="50"></span>
-              <span class="fh5co-counter-label">Rating &amp; Review</span>
-          </div>-->
         </div>
       </div>
     </div>
@@ -750,7 +748,6 @@
                 <a class="circle_element" href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="fa-brands fa-twitter" style="color: #000;"></i></a>
                 <a class="circle_element" href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="fa-brands fa-facebook" style="color: #000;"></i></a>
                 <a class="circle_element" href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000;"></i></a>
-                <!--<a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><span class="footer_esp_ta">--</span></a>-->
                 <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><img src="./assets/logos/tripadvisor_l.png"></a>
               </li>
             </ul>
