--- a/restaurant.html
+++ b/restaurant.html
@@ -270,7 +270,7 @@
           <div class="col-md-4 col-md-offset-4">
             <div class="hotel-content1">
               <div class="desc" style="justify-content: center; text-align: center;">
-                <p><a href="./files/qr-menu.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
+                <p><a href="./files/m_restaurante2022.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
               </div>
             </div>
           </div>
