Horarios y reglamentos actualizados

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                     <p>México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera. En Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar.</p>
                     <p class="service-hour">
                       <span>Horario de Servicio</span>
-                      <strong>7:30 AM - 8:00 PM</strong>
+                      <strong>7:00 AM - 10:30 PM</strong>
                     </p>
                     <a href="restaurant.html" class="btn btn-luxe-second text-rsv fontWhite">Ver más</a>
                   </div>
@@ -546,7 +546,7 @@
                       Visítanos y no te arrepentirás de nuestro Café</p>
                     <p class="service-hour">
                       <span>Horario de Servicio</span>
-                      <strong>7:30 AM - 8:00 PM</strong>
+                      <strong>7:00 AM - 10:30 PM</strong>
                     </p>
                     <a href="cafe.html" class="btn btn-luxe-second text-rsv fontWhite">Ver más</a>
                   </div>
@@ -594,7 +594,8 @@
                       <li><i class="fa-solid fa-shield-dog fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i>Lleva documentación de tu mascota.</li>
                     </ul>
                     <p class="text-center cursiveFont fontHover">Costo por perrito: $300MXN por noche.<br>En habitaciones designadas.</p>
-                    <a href="./files/Reglamento_petFriendly_HPMx.pdf" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Reglamento</a>
+                    <a href="./files/reg_mascotas_esp.pdf" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Reglamento (Español)</a>
+                    <a href="./files/reg_mascotas_eng.pdf" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Reglamento (Inglés)</a>
                   </div>
                 </div>
               </div>
