--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     -->
 
     <div id="fh5co-counter-section" class="fh5co-counters">
-      <div class="container">
+      <div class="container" style="padding-top: 70px!important;">
         <div class="row">
           <div class="col-md-3 text-center">
             <div id="TA_certificateOfExcellence321" class="TA_certificateOfExcellence" style="display: flex!important; justify-content: center!important;"><ul id="Hyeg0E7bq" class="TA_links CFs3dF7G0xKM"><li id="0CE8Xgw7lt" class="YBsrKIUq"><a target="_blank" href="https://www.tripadvisor.es/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html"><img src="https://static.tacdn.com/img2/travelers_choice/widgets/tchotel_2022_LL.png" alt="TripAdvisor" class="widCOEImg" id="CDSWIDCOELOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=certificateOfExcellence&amp;uniq=321&amp;locationId=12696075&amp;lang=es&amp;year=2022&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
