--- a/rooms.html
+++ b/rooms.html
@@ -303,7 +303,7 @@
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Deluxe Dos Camas</h2>
                         <p style="color:#FFF;">Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
-                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a> <i class="fa-solid fa-paw" data-toggle="tooltip" data-placement="top" title="Habitación PetFriendly" style="color: #000!important; font-size: 2.5rem!important;"></i></p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaMS">
@@ -358,7 +358,7 @@
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Junior Suite</h2>
                         <p style="color:#FFF;">Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte.</p>
-                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a><i class="fa-solid fa-paw" data-toggle="tooltip" data-placement="top" title="Habitación PetFriendly" style="color: #000!important; font-size: 2.5rem!important;"></i></p>
                     </div>
                 </section>
             </div>
@@ -424,6 +424,9 @@
 <script src="js_t/jquery-1.11.3.min.js"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/jquery.countTo.js"></script>
@@ -435,6 +438,7 @@
 <script src="js_t/datepicker.min.js"></script>
 <script src="js_t/jquery.singlePageNav.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
+<!--<script src="https://unpkg.com/@popperjs/core@2"></script>-->
 <script src="js/custom.js"></script>
 <script>
     /* Google Maps
