--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/superfish.css">
   <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/cs-select.css">
   <link rel="stylesheet" href="css/cs-skin-border.css">
   <link rel="stylesheet" href="css/themify-icons.css">
@@ -269,6 +270,221 @@
     </div>
     <!----------------------------------------------------->
     <!------------------------------------------->
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-title text-center mb-0">
+            <h2>Preguntas Frecuentes</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12">
+          <div class="accordion" id="accordionExample">
+            <!---FAQ1--->
+            <div class="card">
+              <div class="card-header" id="faq_h1">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1">
+                    1.	¿Cuentan con estacionamiento?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b1" class="collapse show" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  El hotel no cuenta con estacionamiento en las instalaciones, pero tenemos un convenio con el estacionamiento DePrisa ubicado en Isabel la Católica esquina con 16 de septiembre y tiene un costo de $300.00 MXN por 24 horas.
+                </div>
+              </div>
+            </div>
+            <!---FAQ2--->
+            <div class="card">
+              <div class="card-header" id="faq_h2">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b2" aria-expanded="true" aria-controls="faq_b2">
+                    2.	¿Qué instalaciones ofrecen?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b2" class="collapse" aria-labelledby="faq_h2" data-parent="#accordionExample">
+                <div class="card-body">
+                  Contamos con restaurante, cafetería, room service, terraza y gimnasio.
+                </div>
+              </div>
+            </div>
+            <!---FAQ3--->
+            <div class="card">
+              <div class="card-header" id="faq_h3">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b3" aria-expanded="true" aria-controls="faq_b3">
+                    3.	¿Qué habitaciones cuentan con vista?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b3" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  Solo nuestras suites, suite con vista, suite con tina o suite con jacuzzi.
+                </div>
+              </div>
+            </div>
+            <!---FAQ4--->
+            <div class="card">
+              <div class="card-header" id="faq_h4">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b4" aria-expanded="true" aria-controls="faq_b4">
+                    4.	¿Qué tipo de paquetes ofrecen para decorar la habitación?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b4" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  El precio del paquete es independiente al precio de la habitación<br>
+                  <span class="cursiveFont fontPrimary">Paquete</span> <span class="fontHover">LUNAMIELERO</span>
+                  <ul style="font-size: 1.5rem; margin-bottom: 0;">
+                    <li>Decoración con pétalos de rosa en la habitación.</li>
+                    <li>Botella de vino espumoso.</li>
+                    <li>Decoración con velas en la habitación.</li>
+                    <li>Fresas con chocolate.</li>
+                    <li>Arreglo floral.</li>
+                  </ul>
+                  <small class="fontHover mt-0 pt-0">TOTAL: $1,600.00MXN </small><br>
+                  <span class="cursiveFont fontPrimary">Paquete</span> <span class="fontHover">ANIVERSARIO</span>
+                  <ul style="font-size: 1.5rem; margin-bottom: 0;">
+                    <li>Globo metálico con el número de celebración.</li>
+                    <li>Botella de vino espumoso.</li>
+                    <li>Confeti metálico para decorar.</li>
+                    <li>Rebanada de cheesecake.</li>
+                  </ul>
+                  <small class="fontHover mt-0 pt-0">TOTAL: $1,350.00MXN </small><br>
+                  <span class="cursiveFont fontPrimary">Paquete</span> <span class="fontHover">CUMPLEAÑOS</span>
+                  <ul style="font-size: 1.5rem; margin-bottom: 0;">
+                    <li>Globos metálicos con la edad del cumpleañero.</li>
+                    <li>Decoración con globos en la habitación.</li>
+                    <li>Rebanada de cheesecake.</li>
+                  </ul>
+                  <small class="fontHover mt-0 pt-0">TOTAL: $1,100.00MXN </small><br>
+                  <small class="" style="color: #000;"><span class="fontHover">Nota:</span> Para poder reservar algún paquete es necesario que se proporcione una tarjeta de crédito ya que el pago es por adelantado o bien realizar una transferencia tres días antes de su llegada</small>
+                </div>
+              </div>
+            </div>
+            <!---FAQ5--->
+            <div class="card">
+              <div class="card-header" id="faq_h5">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b5" aria-expanded="true" aria-controls="faq_b5">
+                    5.	¿Que necesito para reservar?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b5" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  <ul style="font-size: 1.5rem; margin-bottom: 0;">
+                    <li>Nombre</li>
+                    <li>Correo electrónico</li>
+                    <li>Número telefónico</li>
+                    <li>Tarjeta de crédito que este a nombre del titular de la reserva (16 dígitos y fecha de vencimiento)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!---FAQ6--->
+            <div class="card">
+              <div class="card-header" id="faq_h6">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b6" aria-expanded="true" aria-controls="faq_b6">
+                    6.	¿Cuál es la dirección del hotel?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b6" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  Calle de Republica de Uruguay #47 col. Centro.
+                </div>
+              </div>
+            </div>
+            <!---FAQ7--->
+            <div class="card">
+              <div class="card-header" id="faq_h7">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b7" aria-expanded="true" aria-controls="faq_b7">
+                    7.	¿Cuentan con servicio de pick up?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b7" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+                <div class="card-body">
+                  Si, se tiene que reservar un día antes de su llegada, el costo para dos personas es de $600.00MXN, aeropuerto – hotel.
+                </div>
+              </div>
+            </div>
+            <!---FAQ8--->
+            <div class="card">
+              <div class="card-header" id="faq_h8">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b8" aria-expanded="true" aria-controls="faq_b8">
+                    8.	¿Aceptan mascotas?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b8" class="collapse" aria-labelledby="faq_h8" data-parent="#accordionExample">
+                <div class="card-body">
+                  Si, tiene un con cargo extra de $300.00MXN por noche.<br>
+                  Si son de servicio no tiene costo alguno, pero es necesario entregar los papeles donde validen que es de servicio.<br>
+                  Puede alejarse con su mascota solo en las siguientes categorías: Deluxe dos camas matrimoniales, Junior suite cama king size y Suite con vista.
+                </div>
+              </div>
+            </div>
+            <!---FAQ9--->
+            <div class="card">
+              <div class="card-header" id="faq_h9">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b9" aria-expanded="true" aria-controls="faq_b9">
+                    9.	¿Cuál es la hora del check in y del check out?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b9" class="collapse" aria-labelledby="faq_h9" data-parent="#accordionExample">
+                <div class="card-body">
+                  El <span class="fontHover"><i>check in</i></span> es a partir de las 3:00pm y el <span
+                        class="fontHover"><i>check out</i></span> es a la 1:00pm.
+                </div>
+              </div>
+            </div>
+            <!---FAQ10--->
+            <div class="card">
+              <div class="card-header" id="faq_h10">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b10" aria-expanded="true" aria-controls="faq_b10">
+                    10.	¿Cuál es el horario del desayuno?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b10" class="collapse" aria-labelledby="faq_h10" data-parent="#accordionExample">
+                <div class="card-body">
+                  De lunes a sábado de 7:00am a 12:00pm y los domingos de 8:00am a 12:00pm.
+                </div>
+              </div>
+            </div>
+            <!---FAQ11--->
+            <div class="card">
+              <div class="card-header" id="faq_h11">
+                <h2 class="mb-0">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b11" aria-expanded="true" aria-controls="faq_b11">
+                    11.	¿Cuentan con cunas?
+                  </button>
+                </h2>
+              </div>
+              <div id="faq_b11" class="collapse" aria-labelledby="faq_h11" data-parent="#accordionExample">
+                <div class="card-body">
+                  Si, solo es posible colocarlas en nuestras habitaciones de dos camas, suites con tina, suite con vista y nuestra master suite.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-2"></div>
+      </div>
+    </div>
     <!------------------------------------------->
     <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse; padding-top: 1.5rem!important; padding-bottom: 0.5rem!important;">
       <div class="row">
