--- a/index.html
+++ b/index.html
@@ -609,14 +609,16 @@
                   <div class="col-md-6">
                     <span class="super-heading-sm fontHover">Conoce nuestro</span>
                     <h3 class="heading cursiveFont">Menú de Almohadas</h3>
-                    <h4 class="cursiveFont">Lorem ipsum dolor sit amet.</h4>
+                    <h4 class="cursiveFont">Un mayor descanso en Punto MX</h4>
                     <!--<ul class="list-unstyled">
                       <li><i class="fa-solid fa-list-check fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i> No olvides descargar el reglamento para la entrada de tu perrito a Hotel Punto MX.</li>
                       <li><i class="fa-solid fa-dog fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i>Peso limite permitido hasta 15 kg en talla chica.</li>
                       <li><i class="fa-solid fa-shield-dog fontHover" style="font-size: 3.5rem; margin-right: 10px;"></i>Lleva documentación de tu mascota.</li>
                     </ul>-->
-                    <p class="text-center cursiveFont fontHover">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                    <a href="#" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Menú</a>
+                    <small class="text-center cursiveFont fontHover">*sujeto a disponibilidad</small><br>
+                    <small class="text-center cursiveFont fontHover">*pregunta en recepeción</small><br>
+                    <h4 class="cursiveFont">Descanso total.</h4>
+                    <a href="./files/Menu_Almohadas.pdf" target="_blank" class="btn btn-luxe-second text-rsv fontWhite">Ver Menú</a>
                   </div>
                 </div>
               </div>
