--- a/contact.html
+++ b/contact.html
@@ -270,10 +270,10 @@
     </div>
     <!----------------------------------------------------->
     <!------------------------------------------->
-    <div class="container pt-5">
+    <div class="container pt-lg-5">
       <div class="row">
         <div class="col-md-12">
-          <div class="section-title text-center mb-0">
+          <div class="section-title text-center mb-0 pt-sm-0 pt-lg-3" style="padding-top: 1em!important;">
             <h2>Preguntas Frecuentes</h2>
           </div>
         </div>
@@ -286,7 +286,7 @@
             <div class="card">
               <div class="card-header" id="faq_h1">
                 <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1">
+                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1" style="word-break: break-word;">
                     1.	¿Cuentan con estacionamiento?
                   </button>
                 </h2>
@@ -336,7 +336,7 @@
                   </button>
                 </h2>
               </div>
-              <div id="faq_b4" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+              <div id="faq_b4" class="collapse" aria-labelledby="faq_h4" data-parent="#accordionExample">
                 <div class="card-body">
                   El precio del paquete es independiente al precio de la habitación<br>
                   <span class="cursiveFont fontPrimary">Paquete</span> <span class="fontHover">LUNAMIELERO</span>
