--- a/contact.html
+++ b/contact.html
@@ -286,7 +286,7 @@
             <div class="card">
               <div class="card-header" id="faq_h1">
                 <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1" style="word-break: break-word;">
+                  <button class="btn btn-link btnHover" type="button" data-toggle="collapse" data-target="#faq_b1" aria-expanded="true" aria-controls="faq_b1">
                     1.	¿Cuentan con estacionamiento?
                   </button>
                 </h2>
@@ -301,12 +301,12 @@
             <div class="card">
               <div class="card-header" id="faq_h2">
                 <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b2" aria-expanded="true" aria-controls="faq_b2">
+                  <button class="btn btn-link btn-block text-left btnHover collapsed" type="button" data-toggle="collapse" data-target="#faq_b2" aria-expanded="true" aria-controls="faq_b2">
                     2.	¿Qué instalaciones ofrecen?
                   </button>
                 </h2>
               </div>
-              <div id="faq_b2" class="collapse" aria-labelledby="faq_h2" data-parent="#accordionExample">
+              <div id="faq_b2" class="collapse" aria-labelledby="faq_h2" data-parent="#accordionExample" aria-expanded="false">
                 <div class="card-body">
                   Contamos con restaurante, cafetería, room service, terraza y gimnasio.
                 </div>
@@ -316,12 +316,12 @@
             <div class="card">
               <div class="card-header" id="faq_h3">
                 <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left btnHover" type="button" data-toggle="collapse" data-target="#faq_b3" aria-expanded="true" aria-controls="faq_b3">
+                  <button class="btn btn-link btn-block text-left btnHover collapsed" type="button" data-toggle="collapse" data-target="#faq_b3" aria-expanded="true" aria-controls="faq_b3">
                     3.	¿Qué habitaciones cuentan con vista?
                   </button>
                 </h2>
               </div>
-              <div id="faq_b3" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+              <div id="faq_b3" class="collapse" aria-labelledby="faq_h3" data-parent="#accordionExample">
                 <div class="card-body">
                   Solo nuestras suites, suite con vista, suite con tina o suite con jacuzzi.
                 </div>
@@ -376,7 +376,7 @@
                   </button>
                 </h2>
               </div>
-              <div id="faq_b5" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+              <div id="faq_b5" class="collapse" aria-labelledby="faq_h5" data-parent="#accordionExample">
                 <div class="card-body">
                   <ul style="font-size: 1.5rem; margin-bottom: 0;">
                     <li>Nombre</li>
@@ -396,7 +396,7 @@
                   </button>
                 </h2>
               </div>
-              <div id="faq_b6" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+              <div id="faq_b6" class="collapse" aria-labelledby="faq_h6" data-parent="#accordionExample">
                 <div class="card-body">
                   Calle de Republica de Uruguay #47 col. Centro.
                 </div>
@@ -411,7 +411,7 @@
                   </button>
                 </h2>
               </div>
-              <div id="faq_b7" class="collapse" aria-labelledby="faq_h1" data-parent="#accordionExample">
+              <div id="faq_b7" class="collapse" aria-labelledby="faq_h7" data-parent="#accordionExample">
                 <div class="card-body">
                   Si, se tiene que reservar un día antes de su llegada, el costo para dos personas es de $600.00MXN, aeropuerto – hotel.
                 </div>
@@ -585,6 +585,8 @@
 </div>
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/bootstrap.min.js"></script>
