Corrección texto FAQ

--- a/contact.html
+++ b/contact.html
@@ -428,7 +428,7 @@
               </div>
               <div id="faq_b8" class="collapse" aria-labelledby="faq_h8" data-parent="#accordionExample">
                 <div class="card-body">
-                  Si, tiene un con cargo extra de $300.00MXN por noche.<br>
+                  Si, tiene un cargo extra de $300.00MXN por noche.<br>
                   Si son de servicio no tiene costo alguno, pero es necesario entregar los papeles donde validen que es de servicio.<br>
                   Puede alejarse con su mascota solo en las siguientes categorías: Deluxe dos camas matrimoniales, Junior suite cama king size y Suite con vista.
                 </div>
