cambios a restauran, Galeria reducida, adición de Buffet

--- a/restaurant.html
+++ b/restaurant.html
@@ -281,63 +281,51 @@
     <!----------------------------------------------------->
     <div id="fh5co-blog-section" style="padding: 2rem 2rem 3rem;">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
+        <div class="row" style="">
+          <div class="col-lg-6 col-md-6 col-sm-12" style="min-height: auto; align-self: center;">
             <div class="section-title text-center" style="margin-bottom: 30px;">
               <h2>Galería</h2>
+            </div>
+            <div class="slider">
+              <ul>
+                <li>
+                  <img src="./assets/webp/ALITAS.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/webp/AUGACHILE.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/webp/CORTE.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/webp/SALMON.jpeg" alt="">
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="section-title text-center" style="margin-bottom: 30px;">
+              <h2>Promociones</h2>
+            </div>
+            <div class="slider">
+              <ul>
+                <li>
+                  <img src="./assets/proms/prom_1.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/proms/prom_1.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/proms/prom_2.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/proms/prom_2.jpeg" alt="">
+                </li>
+              </ul>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="slider">
-            <ul>
-              <li>
-                <img src="./assets/webp/ALITAS.jpeg" alt="">
-              </li>
-              <li>
-                <img src="./assets/webp/AUGACHILE.jpeg" alt="">
-              </li>
-              <li>
-                <img src="./assets/webp/CORTE.jpeg" alt="">
-              </li>
-              <li>
-                <img src="./assets/webp/SALMON.jpeg" alt="">
-              </li>
-            </ul>
-          </div>
-          <!--<div class="col-md-4">
-            <div class="blog-grid" style="background-image: url(assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain;">
-              <div class="date text-center">
-                <span>09</span>
-                <small>Ago</small>
-              </div>
-            </div>
-            <div class="desc">
-              <h3><a href="#"></a></h3>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.webp); background-size: contain;">
-              <div class="date text-center">
-                <span>09</span>
-                <small>Ago</small>
-              </div>
-            </div>
-            <div class="desc">
-              <h3><a href="#"></a></h3>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE.webp); background-size: contain;">
-              <div class="date text-center">
-                <span>09</span>
-                <small>Ago</small>
-              </div>
-            </div>
-            <div class="desc">
-              <h3><a href="#"></a></h3>
-            </div>
-          </div>-->
         </div>
       </div>
     </div>
