--- a/restaurant.html
+++ b/restaurant.html
@@ -337,6 +337,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
+                <small class="cursiveFont">El punto más cómodo de México.</small>
               <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
